# AI-Powered-Driver-Assistant

./: .gitignore
src/backend/voice-agent/: AI_Voicebot_LiveKit_Architecture.md  Dockerfile  README.md  pyproject.toml  requirements.txt  test_client.html  test_server.py
src/backend/voice-agent/app/: main.py
src/backend/voice-agent/app/agent/: customer_agent.py  customer_prompts.py  prompts.py  session.py  voice_agent.py
src/backend/voice-agent/app/config/: logging.py  settings.py
src/backend/voice-agent/app/providers/: __init__.py
src/backend/voice-agent/app/providers/llm/: base.py  gemini.py  openai.py
src/backend/voice-agent/app/providers/stt/: base.py  deepgram.py  openai.py
src/backend/voice-agent/app/providers/tts/: base.py  elevenlabs.py  google.py  openai.py
src/backend/voice-agent/app/services/: backend_api.py  conversation_service.py  silence_tracker.py
src/backend/voice-agent/app/tools/: base.py  call_tools.py  customer_support_tools.py  customer_tools.py  registry.py  reminder_tools.py  trip_tools.py
src/backend/voice-agent/app/voicebot/: __init__.py
src/backend/voice-agent/app/voicebot/en/: __init__.py  agent.py  constants.py  pronunciations.py  system_instructions.py  tools_definition.py  tools_mapping.py
src/backend/voice-agent/app/voicebot/processors/: prefetch.py
src/backend/voice-agent/app/voicebot/vn/: __init__.py  agent.py  constants.py  pronunciations.py  system_instructions.py  (+2 more)
src/backend/voice-agent/envs/: .env.example
src/backend/voice-agent/scripts/: setup_sip.py
src/backend/voice-agent/tests/: smoke_test.py
(+237 files in other folders)
