[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "livekit-voice-agent"
version = "1.0.0"
description = "AI voice agent for driver assistance — LiveKit + OpenAI/ElevenLabs"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai,google,elevenlabs,deepgram,silero,turn-detector,anthropic,cartesia,noise-cancellation]>=1.2.11",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
